--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "scripts": {
-    "docs:dev": "vitepress dev",
-    "docs:build": "vitepress build",
-    "docs:preview": "vitepress preview"
-  },
+"scripts": {
+  "dev": "vitepress dev .",
+  "build": "vitepress build .",
+  "preview": "vitepress preview ."
+},
   "devDependencies": {
     "vitepress": "^1.6.4",
     "vitepress-sidebar": "^1.33.1"
